--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/GamingCoder/dir-sync#readme",
   "devDependencies": {
+    "chai": "^3.0.0",
     "mocha": "^2.2.5"
   }
 }
